# zmq-task-dispatcher

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  ObjectPool.md  README.md
examples/js/: README.md  index.ts  package.json
examples/js/comm-zmq-rpc-client/: index.ts  pending-requests.ts  stats.ts
src/: custom-memory.hpp  gstreamer_executor.cpp  gstreamer_executor.hpp  headers.hpp  jsonrpc_handler.cpp  jsonrpc_handler.hpp  lockfree_object_pool.hpp  main.cpp  message_dispatcher.cpp  message_dispatcher.hpp  messages.cpp  messages.hpp  methods.cpp  methods.hpp  mpsc_queue.hpp  shutdown.cpp  shutdown.hpp  tracer.hpp  utils.hpp  worker-pool.cpp  worker-pool.hpp  zmq_server.cpp  zmq_server.hpp
